app/teleport/teleport-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teleport
  annotations: { argocd.argoproj.io/sync-wave: "-1" }
